--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-img{
+.logo-fatec{
   display: block;
   margin: auto;
   max-width: 60%;
@@ -9,7 +9,7 @@ h1{
     text-align: center;
 }
 
-ul {
+ul {  /*menu*/
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -18,12 +18,12 @@ ul {
     background-color: #333;
   }
   
-  li {
+  li { /*menu*/
     display: inline-block;
     margin: 0 10px;
   }
   
-  li a {
+  li a { /*menu*/
     display: block;
     color: white;
     text-align: center;
@@ -31,7 +31,46 @@ ul {
     text-decoration: none;
   }
   
-  li a:hover {
+  li a:hover {  /*menu*/
     background-color: #111;
   }
   
+
+main{
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px #08355A;
+    width: 500px;
+    height: 470px;
+    padding: 20px;
+    margin: auto;
+    margin-top: 20px;
+    text-align: center;
+}
+
+.container{
+  display: grid;
+  grid-template-columns: 200px 200px;
+  grid-template-rows: 100px 100px;
+  grid-column-gap: 50px;
+  grid-row-gap: 150px;
+  justify-content: center;
+  
+}
+
+.item{      
+  background-color: #98d5ec8a;
+  padding: 5px;
+  margin: auto;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  box-shadow: 5px 5px 20px #08355A;
+  border-radius: 3px;
+
+}
+
+.tamanho-img{
+  width: 200px;
+  height: 200px;
+}
