--- a/home.css
+++ b/home.css
@@ -1,21 +1,76 @@
-.body{
-    font-family: Arial, Helvetica, sans-serif;
+.logo-fatec{
+  display: block;
+  margin: auto;
+  max-width: 60%;
+  height: auto;
 }
+
+h1{  /*home no lugar da logo*/
+    text-align: center;
+}
+
+ul {  /*menu*/
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  li { /*menu*/
+    display: inline-block;
+    margin: 0 10px;
+  }
+  
+  li a { /*menu*/
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover {  /*menu*/
+    background-color: #111;
+  }
+  
 
 main{
     background-color: white;
     border-radius: 10px;
     box-shadow: 5px 5px 15px #08355A;
     width: 500px;
-    height: 700px;
+    height: 470px;
     padding: 20px;
     margin: auto;
     margin-top: 20px;
-    text-align: justify;
+    text-align: center;
 }
 
+.container{  /*card dos gatinhos*/
+  display: grid;
+  grid-template-columns: 200px 200px;
+  grid-template-rows: 100px 100px;
+  grid-column-gap: 50px;
+  grid-row-gap: 150px;
+  justify-content: center;
+  
+}
 
-.fusca{
-    width: auto;
-    height: 300px;
+.item{      /*card de fato*/
+  background-color: #98d5ec8a;
+  padding: 5px;
+  margin: auto;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  box-shadow: 5px 5px 20px #08355A;
+  border-radius: 3px;
+
+}
+
+.tamanho-img{  /*card*/
+  width: 200px;
+  height: 200px;
 }
