--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
-.logo-fatec{
-  display: block;
-  margin: auto;
-  max-width: 60%;
-  height: auto;
+.body{
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-h1{
+.logo-fatec{
+    display: block;
+    margin: auto;
+    max-width: 60%;
+    height: auto;
+  }
+
+h1{  /*titulo depois do menu*/
     text-align: center;
-}
+}  
 
 ul {  /*menu*/
     list-style-type: none;
@@ -18,12 +22,12 @@ ul {  /*menu*/
     background-color: #333;
   }
   
-  li { /*menu*/
+li { /*menu*/
     display: inline-block;
     margin: 0 10px;
   }
   
-  li a { /*menu*/
+li a { /*menu*/
     display: block;
     color: white;
     text-align: center;
@@ -31,46 +35,24 @@ ul {  /*menu*/
     text-decoration: none;
   }
   
-  li a:hover {  /*menu*/
+li a:hover {  /*menu*/
     background-color: #111;
-  }
-  
+  }  
 
 main{
     background-color: white;
     border-radius: 10px;
     box-shadow: 5px 5px 15px #08355A;
     width: 500px;
-    height: 470px;
+    height: 700px;
     padding: 20px;
     margin: auto;
     margin-top: 20px;
-    text-align: center;
+    text-align: justify;
 }
 
-.container{
-  display: grid;
-  grid-template-columns: 200px 200px;
-  grid-template-rows: 100px 100px;
-  grid-column-gap: 50px;
-  grid-row-gap: 150px;
-  justify-content: center;
-  
-}
 
-.item{      
-  background-color: #98d5ec8a;
-  padding: 5px;
-  margin: auto;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  box-shadow: 5px 5px 20px #08355A;
-  border-radius: 3px;
-
-}
-
-.tamanho-img{
-  width: 200px;
-  height: 200px;
+.fusca{
+    width: auto;
+    height: 300px;
 }
