testando pop up

--- a/home.css
+++ b/home.css
@@ -78,4 +78,8 @@ main{  /*caixa onde o conteúdo está*/
 
 @media (max-width: 768px) {
   /* Estilos para telas menores, como smartphones */
+  .container{
+    width: 100%;
+    height: auto;
+  }
 }
