--- a/style.css
+++ b/style.css
@@ -56,3 +56,72 @@ main{ /*caixa onde o conteúdo está*/
     width: auto;
     height: 300px;
 }
+
+
+
+/*definir as propriedades dos pop'ups */
+.modalDialog{
+    position: fixed;
+    font-family: 'Comic Sans MS';
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: #47bfee83;
+    z-index: 9999;
+    opacity: 0;
+    -webkit-transition: opacity 400ms ease-in;  /* renderizacao Chrome e Safari */
+    -moz-transition: opacity 400ms case-in; /* renderizacao Firefox */
+    transition: opacity 400ms ease-in;
+    pointer-events: none;
+    display: none;
+  }
+
+  .modalDialog:target{
+    display: block;
+    opacity: 1;
+    pointer-events: auto;
+  }
+
+  .modalDialog div{
+    width: 500px;
+    position: relative;
+    margin: 10% auto;
+    padding: 5px 20px 13px 20px;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    border-radius: 10px;
+    background-color: #fff;
+  }
+
+  .modalDialog p{
+    margin-top: 5%;
+    margin-bottom: 5%;
+  }
+
+  .modalDialog img{
+    width: 50%;
+    position: relative;
+    margin-left: 25%;
+  }
+
+  .close{
+    background-color: #606061;
+    color: #ffffff;
+    line-height: 25px;
+    position: absolute;
+    right: -12px;
+    text-align: center;
+    top: -10px;
+    width: 24px;
+    text-decoration: none;
+    font-weight: bold;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    border-radius: 12px;
+  }
+  
+  .close:hover{
+    background-color: #b50909;
+  }
+  /*fim definir as propriedades dos pop'ups */
