--- a/bootstrap.css
+++ b/bootstrap.css
@@ -117,3 +117,10 @@
     }
 }
 
+/*PLANO DE ENSINO*/
+.container-plano{
+    margin-top: 50px;
+    height: auto;
+    padding: 2em;
+    text-align: justify;
+}
